--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -245,4 +245,5 @@
     <string name="title_detail">Detil</string>
     <string name="runtime">Waktu Berjalan</string>
     <string name="change_language">Ganti Bahasa</string>
+    <string name="lang">id-ID</string>
 </resources>
