--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,4 +239,5 @@
     <string name="title_detail">Detail</string>
     <string name="runtime">Runtime</string>
     <string name="change_language">Change Language</string>
+    <string name="lang">en-US</string>
 </resources>
